# logos-wallet-ui

./: CMakeLists.txt  README.md  WalletUIComponent.cpp  WalletUIComponent.h  flake.nix  metadata.json  run.sh
app/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
interfaces/: IComponent.h
nix/: app.nix  default.nix  lib.nix
src/: EthClientTab.cpp  EthClientTab.h  TransactionsTab.cpp  TransactionsTab.h  WalletWidget.cpp  WalletWidget.h  WalletWindow.cpp  WalletWindow.h  main.cpp
